--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             colors: {
               clifford: "#da373d",
               "bike-primary": "#E76F51",
+              "bike-primary-bg": "rgba(231, 111, 81, 0.10)",
             },
           },
         },
@@ -90,8 +91,349 @@
           </div>
         </div>
       </nav>
+
+      <!-- Carousel section -->
+      <div class="carousel w-full lg:h-[550px] bg-bike-primary-bg">
+        <!-- slide 1 -->
+        <div id="slide1" class="carousel-item relative w-full">
+          <div class="flex flex-col lg:flex-row gap-40 p-16 lg:p-28">
+            <div class="space-y-7 flex-1">
+              <h2 class="text-2xl lg:text-5xl font-bold">
+                Ride-on R15 V4 <br />with Smile
+              </h2>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <button class="btn bg-bike-primary text-white font-medium">
+                Purchase
+              </button>
+            </div>
+            <div class="flex-1">
+              <img src="images/slider/bike1.png" class="w-full" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide4" class="btn btn-circle">❮</a>
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+
+        <!-- slide 2 -->
+        <div id="slide2" class="carousel-item relative w-full">
+          <div class="flex flex-col lg:flex-row gap-40 p-16 lg:p-28">
+            <div class="space-y-7 flex-1">
+              <h2 class="text-2xl lg:text-5xl font-bold">
+                Ride-on R15 V4 <br />with Smile
+              </h2>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <button class="btn bg-bike-primary text-white font-medium">
+                Purchase
+              </button>
+            </div>
+            <div class="flex-1">
+              <img src="images/slider/bike2.png" class="w-full" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide1" class="btn btn-circle">❮</a>
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+
+        <!-- slide 3 -->
+        <div id="slide3" class="carousel-item relative w-full">
+          <div class="flex flex-col lg:flex-row gap-40 p-16 lg:p-28">
+            <div class="space-y-7 flex-1">
+              <h2 class="text-2xl lg:text-5xl font-bold">
+                Ride-on R15 V4 <br />with Smile
+              </h2>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <button class="btn bg-bike-primary text-white font-medium">
+                Purchase
+              </button>
+            </div>
+            <div class="flex-1">
+              <img src="images/slider/bike3.png" class="w-full" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide2" class="btn btn-circle">❮</a>
+            <a href="#slide4" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+
+        <!-- slide 4 -->
+        <div id="slide4" class="carousel-item relative w-full">
+          <div class="flex flex-col lg:flex-row gap-40 p-16 lg:p-28">
+            <div class="space-y-7 flex-1">
+              <h2 class="text-2xl lg:text-5xl font-bold">
+                Ride-on R15 V4 <br />with Smile
+              </h2>
+              <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+              </p>
+              <button class="btn bg-bike-primary text-white font-medium">
+                Purchase
+              </button>
+            </div>
+            <div class="flex-1">
+              <img src="images/slider/bike4.png" class="w-full" />
+            </div>
+          </div>
+          <div
+            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
+          >
+            <a href="#slide3" class="btn btn-circle">❮</a>
+            <a href="#slide1" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+      </div>
     </header>
-    <main></main>
+
+    <main class="md:container md:mx-auto">
+      <!-- featured bike -->
+      <section class="my-24 lg:px-12">
+        <h3 class="text-2xl lg:text-5xl font-semibold text-center">
+          Fetured Bikes In This Year
+        </h3>
+        <p class="text-bike-primary text-center">Best bike collection</p>
+        <div
+          class="bike-featured grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 pt-10 pl-10 gap-8"
+        >
+          <img src="images/others/feature-bike.png" alt="" />
+          <img src="images/others/feature-bike.png" alt="" />
+          <img src="images/others/feature-bike.png" alt="" />
+        </div>
+      </section>
+
+      <!-- latest bikes -->
+      <section class="my-24">
+        <h3 class="text-5xl font-semibold text-center mb-12">Latest News</h3>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5 px-4">
+          <!-- first card-->
+          <div class="card bg-base-100 shadow-xl">
+            <figure>
+              <img src="images/others/latest1.png" alt="" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-3xl font-medium">
+                Ducati XDIAVEL S-73
+              </h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions">
+                <button class="btn bg-bike-primary text-white uppercase">
+                  Purchase
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- second card-->
+          <div class="card bg-base-100 shadow-xl">
+            <figure>
+              <img src="images/others/latest2.png" alt="" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-3xl font-medium">
+                Ducati XDIAVEL S-73
+              </h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions">
+                <button class="btn bg-bike-primary text-white uppercase">
+                  Purchase
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- third card-->
+          <div class="card bg-base-100 shadow-xl">
+            <figure>
+              <img src="images/others/latest3.png" alt="" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title text-3xl font-medium">
+                Ducati XDIAVEL S-73
+              </h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions">
+                <button class="btn bg-bike-primary text-white uppercase">
+                  Purchase
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- clients section -->
+      <section class="my-24">
+        <h3 class="text-2xl lg:text-5xl font-semibold text-center mb-12">
+          Happy <span class="text-bike-primary">Clients says</span>
+        </h3>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 mx-6">
+          <!-- first review -->
+          <div class="card bg-base-100 shadow-xl p-9 border border-gray-400">
+            <figure>
+              <img class="w-36" src="images/others/user-1.png" alt="" />
+            </figure>
+            <div class="card-body">
+              <p>
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+
+              <div class="rating justify-center">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+              <div class="text-center space-y-4 mt-4">
+                <h4 class="text-sm font-semibold text-info">Regina Miles</h4>
+                <p class="text-sm">Banker</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- second review -->
+          <div class="card bg-base-100 shadow-xl p-9 border border-gray-400">
+            <figure>
+              <img class="w-36" src="images/others/user-2.png" alt="" />
+            </figure>
+            <div class="card-body">
+              <p>
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+
+              <div class="rating justify-center">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+              <div class="text-center space-y-4 mt-4">
+                <h4 class="text-sm font-semibold text-info">Regina Miles</h4>
+                <p class="text-sm">Banker</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- third review -->
+          <div class="card bg-base-100 shadow-xl p-9 border border-gray-400">
+            <figure>
+              <img class="w-36" src="images/others/user-3.png" alt="" />
+            </figure>
+            <div class="card-body">
+              <p>
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+
+              <div class="rating justify-center">
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                  checked
+                />
+                <input
+                  type="radio"
+                  name="rating-2"
+                  class="mask mask-star-2 bg-orange-400"
+                />
+              </div>
+              <div class="text-center space-y-4 mt-4">
+                <h4 class="text-sm font-semibold text-info">Regina Miles</h4>
+                <p class="text-sm">Banker</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
