--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
           Frequently Asked <span class="text-bike-primary">Questions</span>
         </h3>
 
-        <div class="hero min-h-screen">
+        <div class="hero">
           <div class="hero-content flex-col lg:gap-24 lg:flex-row">
             <img
               src="images/others/faq.png"
@@ -516,6 +516,34 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+
+    <footer
+      class="footer flex flex-col md:flex-row lg:flex-row justify-between items-center p-8 bg-neutral text-white"
+    >
+      <aside>
+        <div class="para1 flex flex-col md:flex-row lg:flex-row gap-5">
+          <p>Download Now</p>
+          <p>License</p>
+        </div>
+
+        <div class="para2 flex flex-col md:flex-row lg:flex-row gap-5">
+          <p>About</p>
+          <p>Features</p>
+          <p>Pricing</p>
+          <p>Careers</p>
+          <p>Help</p>
+          <p>Privacy Policy</p>
+        </div>
+
+        <p class="text-sm pt-5">© 2020 bike. All rights reserved</p>
+      </aside>
+      <nav>
+        <h6 class="footer-title">Social</h6>
+        <div class="grid grid-cols-1 gap-4">
+          <a><img class="w-36" src="images/others/android.png" alt="" /></a>
+          <a><img class="w-36" src="images/others/ios.png" alt="" /></a>
+        </div>
+      </nav>
+    </footer>
   </body>
 </html>
